--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "remix-cache-demo",
+  "name": "test-remix-cache",
   "private": true,
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix build",
-    "dev": "remix dev",
+    "build": "remix vite:build",
+    "dev": "remix vite:dev",
+    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "netlify serve",
-    "typecheck": "tsc -b"
+    "typecheck": "tsc"
   },
   "dependencies": {
+    "@netlify/blobs": "^6.5.0",
     "@netlify/functions": "^2.6.0",
-    "@netlify/remix-adapter": "^2.0.0",
-    "@remix-run/node": "^2.6.0",
-    "@remix-run/react": "^2.6.0",
-    "cross-env": "^7.0.3",
-    "isbot": "^3.6.8",
+    "@netlify/remix-adapter": "^2.3.0",
+    "@remix-run/node": "^2.9.0",
+    "@remix-run/react": "^2.9.0",
+    "@remix-run/serve": "^2.9.0",
+    "@sindresorhus/slugify": "^2.2.1",
+    "isbot": "^4.1.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,15 +26,23 @@
     "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.6.0",
-    "@remix-run/eslint-config": "^2.6.0",
-    "@remix-run/serve": "^2.6.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "eslint": "^8.27.0",
-    "typescript": "^5.2.2"
+    "@remix-run/dev": "^2.9.0",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "@types/sort-by": "^1.2.3",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "typescript": "^5.1.6",
+    "vite": "^5.0.0",
+    "vite-tsconfig-paths": "^4.2.1"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=18.0.0"
   }
 }
